Add initial build/ inject artifact releaser jobs

--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -846,6 +846,248 @@ jobs:
       result_state: "failure"
       start_timestamp: ((.:start-timestamp-ms))
 
+- name: build-artifact-releaser
+  plan:
+  - get: guest-agent
+    trigger: true
+    params:
+      skip_download: true
+  - load_var: commit-sha
+    file: guest-agent/.git/ref
+  - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-github-token
+    file: guest-test-infra/concourse/tasks/get-github-token.yaml
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: timestamp
+    file: timestamp/timestamp
+  - task: guest-agent-integration-test
+    file: guest-test-infra/concourse/tasks/package-gointegtest.yaml
+    vars:
+      repo-name: guest-agent
+      timestamp: ((.:timestamp))
+  - task: validate-integtest-result
+    file: guest-test-infra/concourse/tasks/validate-integtest-result.yaml
+    vars:
+      timestamp: ((.:timestamp))
+      repo-name: guest-agent
+  - task: generate-package-version
+    file: guest-test-infra/concourse/tasks/generate-package-version.yaml
+    input_mapping: {repo: guest-agent}
+  - load_var: package-version
+    file: package-version/version
+  - in_parallel:
+      fail_fast: true
+      steps:
+      - task: guest-package-build-guest-agent-deb9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_deb9.wf.json
+          repo-name: guest-agent
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/artifact-releaser
+          git_ref: main
+      - task: guest-package-build-guest-agent-el7
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el7.wf.json
+          repo-name: guest-agent
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/artifact-releaser
+          git_ref: main
+      - task: guest-package-build-guest-agent-el8
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el8.wf.json
+          repo-name: guest-agent
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/artifact-releaser
+          git_ref: main
+      - task: guest-package-build-guest-agent-goo
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_goo.wf.json
+          repo-name: guest-agent
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/artifact-releaser
+          git_ref: main
+  - put: guest-agent-tag
+    params:
+      name: package-version/version
+      tag: package-version/version
+      commitish: guest-agent/.git/ref
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "guest-package-build"
+      job: "build-artifact-releaser"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "guest-package-build"
+      job: "build-artifact-releaser"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+
+- name: inject-artifact-releaser-staging
+  plan:
+  - in_parallel:
+      steps:
+      - get: guest-agent-tag
+        passed: [build-guest-agent]
+        trigger: true
+      - get: guest-test-infra
+      - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - load_var: package-version
+    file: guest-agent-tag/version
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-id.yaml
+    vars:
+      prefix: ""
+  - load_var: build-id
+    file: build-id-dir/build-id
+  - in_parallel:
+      fail_fast: true
+      steps:
+      - task: build-package-image-debian-9
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/debian-cloud/global/images/family/debian-9
+          dest-image: debian-9-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent_((.:package-version))-g1_amd64.deb
+      - task: build-package-image-debian-10
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/debian-cloud/global/images/family/debian-10
+          dest-image: debian-10-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent_((.:package-version))-g1_amd64.deb
+      - task: build-package-image-debian-11
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/debian-cloud/global/images/family/debian-11
+          dest-image: debian-11-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent_((.:package-version))-g1_amd64.deb
+      - task: build-package-image-centos-7
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/centos-cloud/global/images/family/centos-7
+          dest-image: centos-7-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent-((.:package-version))-g1.el7.x86_64.rpm
+      - task: build-package-image-rhel-7
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/rhel-cloud/global/images/family/rhel-7
+          dest-image: rhel-7-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent-((.:package-version))-g1.el7.x86_64.rpm
+      - task: build-package-image-centos-8
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/centos-cloud/global/images/family/centos-8
+          dest-image: centos-8-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
+      - task: build-package-image-rhel-8
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/rhel-cloud/global/images/family/rhel-8
+          dest-image: rhel-8-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/artifact-releaser/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
+  - task: guest-agent-image-tests
+    file: guest-test-infra/concourse/tasks/image-test-args.yaml
+    vars:
+      images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/centos-8-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id))
+      extra-args: "-exclude=(image)|(disk)|(security)"
+  - in_parallel:
+      fail_fast: true
+      steps:
+      - task: inject-guest-agent-deb9
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          universe: cloud-apt
+        >>  repo: google-guest-agent-stretch
+        params:
+          ENVIRONMENT: staging
+      - task: inject-guest-agent-deb10
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          universe: cloud-apt
+        >>  repo: google-guest-agent-buster
+        params:
+          ENVIRONMENT: staging
+      - task: inject-guest-agent-deb11
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          universe: cloud-apt
+        >>  repo: google-guest-agent-bullseye
+        params:
+          ENVIRONMENT: staging
+      - task: inject-guest-agent-el7
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent-((.:package-version))-g1.el7.x86_64.rpm
+          universe: cloud-yum
+        >>  repo: google-guest-agent-el7
+        params:
+          ENVIRONMENT: staging
+      - task: inject-guest-agent-el8
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
+          universe: cloud-yum
+        >>  repo: google-guest-agent-el8
+        params:
+          ENVIRONMENT: staging
+      - task: inject-compute-engine-windows
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-compute-engine-windows.x86_64.((.:package-version)).0@1.goo
+          universe: cloud-yuck
+        >>  repo: google-compute-engine-windows
+        params:
+          ENVIRONMENT: staging
+      - task: inject-compute-engine-metadata-scripts
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-compute-engine-metadata-scripts.x86_64.((.:package-version)).0@1.goo
+          universe: cloud-yuck
+        >>  repo: google-compute-engine-metadata-scripts
+        params:
+          ENVIRONMENT: staging
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "guest-package-build"
+      job: "inject-artifact-releaser-staging"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "guest-package-build"
+      job: "inject-artifact-releaser-staging"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+
 - name: promote-guest-configs-staging
   plan:
   - get: guest-configs-tag
