Correct the wf path that is not included when passing wf to the image release tasks.

--- a/concourse/tasks/gcloud-release-image-prod.yaml
+++ b/concourse/tasks/gcloud-release-image-prod.yaml
@@ -19,6 +19,6 @@ run:
   args:
   - -exc
   - |
-    wf=$(cat ((wf)) | sed 's/\"/\\"/g' | tr -d '\n')
+    wf=$(cat ./compute-image-tools/daisy_workflows/build-publish/((wf)) | sed 's/\"/\\"/g' | tr -d '\n')
     gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
     gcloud pubsub topics publish "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod" --message '{"type": "ImagePublish", "request": {"image_name": "((image_name))", "gcs_image_path": "((gcs_image_path))", "image_publish_template": "${wf}", "source_version": "((source_version))", "publish_version": "((publish_version))", "release_notes": "((release_notes))"}}'
