Add artifact-releaser-autopush pipeline config

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -25,3 +25,5 @@ jobs:
     file: guest-test-infra/concourse/pipelines/windows-image-build.yaml
   - set_pipeline: container-build
     file: guest-test-infra/concourse/pipelines/container-build.yaml
+  - set_pipeline: artifact-releaser-autopush
+    file: guest-test-infra/concourse/pipelines/artifact-releaser-autopush.yaml
