Update format  with fly format-pipeline

--- a/concourse/pipelines/artifact-releaser-autopush.yaml
+++ b/concourse/pipelines/artifact-releaser-autopush.yaml
@@ -1,116 +1,110 @@
----
+groups:
+- jobs:
+  - inject-artifact-releaser-autopush-staging
+  - promote-artifact-releaser-autopush-stable
+  name: artifact-releaser-autopush
 jobs:
-
-# build-artifact-releaser-autopush tests Concourse's access to the artifact releaser package release process.
-# build-artifact-releaser-autopush chooses the guest-agent as the "binary" becuase
-# guest-agent is open sourced and available on both linux and windows platforms.
 - name: inject-artifact-releaser-autopush-staging
+  on_failure:
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    task: failure
+    vars:
+      job: inject-artifact-releaser-autopush-staging
+      pipeline: guest-package-build
+      result_state: failure
+      start_timestamp: ((.:start-timestamp-ms))
+  on_success:
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    task: success
+    vars:
+      job: inject-artifact-releaser-autopush-staging
+      pipeline: guest-package-build
+      result_state: success
+      start_timestamp: ((.:start-timestamp-ms))
   plan:
   - get: guest-test-infra
-  - task: generate-timestamp
-    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
-  - load_var: start-timestamp-ms
-    file: timestamp/timestamp-ms
+  - file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+    task: generate-timestamp
+  - file: timestamp/timestamp-ms
+    load_var: start-timestamp-ms
   - in_parallel:
       fail_fast: true
       steps:
-      - task: inject-artifact-releaser-autopush-deb11
-        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+      - file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        params:
+          ENVIRONMENT: staging
+        task: inject-artifact-releaser-autopush-deb11
         vars:
           package_path: artifact-releaser/google-guest-agent_20211019.00-g1_amd64.deb
-          universe: cloud-apt
           repo: guest-arle-autopush-trusty
+          universe: cloud-apt
+      - file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
         params:
           ENVIRONMENT: staging
-      - task: inject-artifact-releaser-autopush-el7
-        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        task: inject-artifact-releaser-autopush-el7
         vars:
           package_path: artifact-releaser/google-guest-agent-20211019.00-g1.el8.x86_64.rpm
-          universe: cloud-yum
           repo: guest-arle-autopush-el7-x86_64
+          universe: cloud-yum
+      - file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
         params:
           ENVIRONMENT: staging
-      - task: inject-compute-engine-windows
-        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        task: inject-compute-engine-windows
         vars:
           package_path: artifact-releaser/google-compute-engine-windows.x86_64.20211019.00.0@1.goo
-          universe: cloud-yuck
           repo: guest-arle-autopush
-        params:
-          ENVIRONMENT: staging
-  on_success:
-    task: success
-    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
-    vars:
-      pipeline: "guest-package-build"
-      job: "inject-artifact-releaser-autopush-staging"
-      result_state: "success"
-      start_timestamp: ((.:start-timestamp-ms))
-  on_failure:
-    task: failure
-    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
-    vars:
-      pipeline: "guest-package-build"
-      job: "inject-artifact-releaser-autopush-staging"
-      result_state: "failure"
-      start_timestamp: ((.:start-timestamp-ms))
-
+          universe: cloud-yuck
 - name: promote-artifact-releaser-autopush-stable
+  on_failure:
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    task: failure
+    vars:
+      job: promote-guest-agent-stable
+      pipeline: guest-package-build
+      result_state: failure
+      start_timestamp: ((.:start-timestamp-ms))
+  on_success:
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    task: success
+    vars:
+      job: promote-guest-agent-stable
+      pipeline: guest-package-build
+      result_state: success
+      start_timestamp: ((.:start-timestamp-ms))
   plan:
   - get: guest-test-infra
-    passed: [inject-artifact-releaser-autopush-staging]
-  - task: generate-timestamp
-    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
-  - load_var: start-timestamp-ms
-    file: timestamp/timestamp-ms
-  - task: get-credential
-    file: guest-test-infra/concourse/tasks/get-credential.yaml
+    passed:
+    - inject-artifact-releaser-autopush-staging
+  - file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+    task: generate-timestamp
+  - file: timestamp/timestamp-ms
+    load_var: start-timestamp-ms
+  - file: guest-test-infra/concourse/tasks/get-credential.yaml
+    task: get-credential
   - in_parallel:
-      - task: promote-deb11-stable
-        file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+      steps:
+      - file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+        task: promote-deb11-stable
         vars:
-          universe: cloud-apt
+          environment: stable
           repo: guest-arle-autopush-trusty
-          environment: stable
-      - task: promote-el7-stable
-        file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+          universe: cloud-apt
+      - file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+        task: promote-el7-stable
         vars:
-          universe: cloud-yum
+          environment: stable
           repo: guest-arle-autopush-el7-x86_64
-          environment: stable
-      - task: promote-windows-stable
-        file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+          universe: cloud-yum
+      - file: guest-test-infra/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+        task: promote-windows-stable
         vars:
-          universe: cloud-yuck
-          repo: guest-arle-autopush
           environment: stable
-  on_success:
-    task: success
-    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
-    vars:
-      pipeline: "guest-package-build"
-      job: "promote-guest-agent-stable"
-      result_state: "success"
-      start_timestamp: ((.:start-timestamp-ms))
-  on_failure:
-    task: failure
-    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
-    vars:
-      pipeline: "guest-package-build"
-      job: "promote-guest-agent-stable"
-      result_state: "failure"
-      start_timestamp: ((.:start-timestamp-ms))
-
+          repo: guest-arle-autopush
+          universe: cloud-yuck
 resources:
 - name: guest-test-infra
-  type: git
   source:
-    uri: https://github.com/GoogleCloudPlatform/guest-test-infra.git
     branch: master
     fetch_tags: true
-
-groups:
-- name: artifact-releaser-autopush
-  jobs:
-  - inject-artifact-releaser-autopush-staging
-  - promote-artifact-releaser-autopush-stable
+    uri: https://github.com/GoogleCloudPlatform/guest-test-infra.git
+  type: git
