--- a/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
+++ b/concourse/tasks/gcloud-promote-artifact-releaser-autopush.yaml
@@ -19,5 +19,5 @@ run:
   - -exc
   - |
     gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-    gcloud pubsub topics publish "projects/artifact-releaser-autopush/topics/gcp-guest-package-promote-autopush" --message '{"type": "promote", "request": {"universe": "((universe))", "repo": "((repo))", "environment": "((environment))"}}'
+    gcloud pubsub topics publish ((topic)) --message '{"type": "promote", "request": {"universe": "((universe))", "repo": "((repo))", "environment": "((environment))"}}'
     
